# sfnttools-python

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/demo/: demo.otc  demo.ttc
assets/gulim/: README.md
assets/opentype-test-fonts/: LICENSE.md  README.md
assets/source-han-sans/: README.md
assets/unifont/: README.md
examples/: demo.py
src/sfnttools/: configs.py  error.py  flags.py  font.py  payload.py  reader.py  table.py  tag.py  writer.py
src/sfnttools/internal/: stream.py
src/sfnttools/tables/: default.py  factory.py
src/sfnttools/tables/cff2/: table.py
src/sfnttools/tables/cff_/: table.py
src/sfnttools/tables/dsig/: __init__.py  blocks.py  flags.py  headers.py  table.py
src/sfnttools/tables/glyf/: __init__.py  component.py  composite.py  description.py  simple.py  table.py
src/sfnttools/tables/head/: __init__.py  enum.py  flags.py  table.py
src/sfnttools/tables/hhea/: enum.py  table.py
src/sfnttools/tables/hmtx/: metric.py  table.py
src/sfnttools/tables/loca/: __init__.py  table.py
src/sfnttools/tables/maxp/: __init__.py  table.py
src/sfnttools/tables/vhea/: table.py
src/sfnttools/tables/vmtx/: metric.py  table.py
src/sfnttools/utils/: checksum.py  math.py  stream.py  time.py
src/sfnttools/woff/: headers.py  reader.py
src/sfnttools/woff2/: glyf.py  headers.py  hmtx.py  reader.py
src/sfnttools/xtf/: headers.py  reader.py
tests/: test_a.py  test_stream.py
tests/utils/: test_checksum.py  test_math.py  test_stream.py  test_time.py
