[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfnttools"
version = "0.0.0"
description = "A library for manipulating the SFNT Format, which is commonly used in TrueType and OpenType fonts"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["sfnt", "font", "truetype", "opentype"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "brotli>=1.1.0",
]

[project.urls]
homepage = "https://github.com/TakWolf/sfnttools-python"
source = "https://github.com/TakWolf/sfnttools-python"
issues = "https://github.com/TakWolf/sfnttools-python/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/assets/",
    "/examples/",
    "/tests/",
]
